src/tests/testfiles/binary-operators/31.txt
testfiles/binary-operators/31.c:3:11: error: array size missing in 'b'
float b[];
      ^
testfiles/binary-operators/31.c:5:7: error: invalid operands to comparison '==' (have 'int *' and 'float *')
a == b;
  ^
